--- a/static/style.css
+++ b/static/style.css
@@ -36,6 +36,10 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
+.hoverinfo{
+    color: black;
+}
+
 button, div, p {
     -webkit-user-select: none;  /* Chrome all / Safari all */
     -moz-user-select: none;     /* Firefox all */
